sec6.css
.sec-7{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 50px;
    gap: 80px;
    height:90vh;
    margin-top:50px;
    margin-bottom:50px;
}
.sec-7-1{
    display:flex;
    font-weight:300px;
    font-size:35px;
    flex-direction: column;
    align-items: center;
    margin-bottom: 50px;
    margin-top:50px;
}
.sec-7-1 h1{
    font-size: 150px;
    font-weight: 600;
    margin-top:100px;
    margin-bottom:100px;
   
}
.sec-7-1 > :nth-child(1){
    font-weight:600;
    margin-top:50px;
    margin-bottom:50px;
}
.a1,.a2{
    display:flex;
    align-items: center;
    gap:10px;
}
.a1 img{
    width:35px;
}
.a2 img{
    width:30px;
}
.sec-7-2{
    display:flex;
    gap:30px;
    border:2px solid black;
    padding:0px;
    border-radius: 30px;
    margin-top:0px;
    margin-bottom:0px;
}
.a1 span,.a2 span{
    font-weight:600;

}
.social-icons a {
  margin: 20px;
  color: #333;
  font-size:90px;
  text-decoration: none;
  margin-top:0px;
  margin-bottom:0px;
}
.contact-icons{
    gap: 20px;
    font-size: 200px;
    align-items: center;
    margin-top:0px;
    margin-bottom:0px;
}
@media (max-width: 873px) {
    span{
        font-size: 20px;
        font-weight: 600;
        margin-top:250px;
        margin-bottom:50px;
    }
    h1{
        font-size: 50px;
        font-weight: 600;
        margin-top:30px;
        margin-bottom:50px;
    }
    .sec-7-1{
        margin-top: 100px;
        margin-bottom: 100px;

    }
    .social-icons a {
    top:60px;
    margin-bottom: 50px;
}
}

